force-app/main/default/objects/ffr__XXXInvoice__c/ffr__XXXInvoice__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX Invoice</label>
    <nameField>
        <displayFormat>XINV{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>