force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__CommonNameTest__c.field-meta.xml
<CustomField>
    <fullName>ffr__CommonNameTest__c</fullName>
    <description>Test common names for Dataview</description>
    <label>Common Name Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestOne</fullName>
            </value>
            <value>
                <fullName>TestTwo</fullName>
            </value>
            <value>
                <fullName>TestThree</fullName>
            </value>
            <value>
                <fullName>TestFour</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>