force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__DualRate__c.field-meta.xml
<CustomField>
    <fullName>ffr__DualRate__c</fullName>
    <description>The dual to home exchange rate.</description>
    <label>Dual Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>