force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>