force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__InvoiceDueDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__InvoiceDueDate__c</fullName>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>