force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__InvoiceRate__c.field-meta.xml
<CustomField>
    <fullName>ffr__InvoiceRate__c</fullName>
    <description>The document to home exchange rate.</description>
    <label>Invoice Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>