force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>ffr__InvoiceStatus__c</fullName>
    <description>The current status of the invoice.</description>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ready to Post</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>