force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__InvoiceTotal__c.field-meta.xml
<CustomField>
    <fullName>ffr__InvoiceTotal__c</fullName>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>