force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__SalesTaxStatus__c.field-meta.xml
<CustomField>
    <fullName>ffr__SalesTaxStatus__c</fullName>
    <description>The current sales tax status of the invoice.</description>
    <label>Sales Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Calculated</fullName>
                <default>true</default>
                <label>Not Calculated</label>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>