force-app/main/default/objects/ffr__XXXInvoice__c/fields/ffr__Transaction__c.field-meta.xml
<CustomField>
    <fullName>ffr__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>ffr__XXXTransaction__c</referenceTo>
    <relationshipLabel>XXX Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>